# logsentinel_actix

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: client.rs  config.rs  error.rs  lib.rs  logger.rs  middleware.rs  prelude.rs  request_body_capture.rs  response_body_capture.rs  utils.rs
