[package]
name = "logsentinel-actix"
version = "0.1.0"
edition = "2021"
authors = ["LogSentinel Team"]
description = "Non-intrusive logging middleware for Actix-Web applications"
license = "MIT"
repository = "https://github.com/yourusername/logsentinel-actix"
keywords = ["actix-web", "logging", "middleware", "monitoring"]
categories = ["web-programming", "asynchronous"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
actix-rt = "2"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
